<resources>
    <string name="app_name">Finale</string>
    <string name="enter">Войти</string>
    <string name="functions">Функции</string>
    <string name="support">Поддержка</string>
    <string name="history">История</string>
    <string name="depositsAndInvestments">Вклады и инвестиции</string>
    <string name="security">Безопасность</string>
    <string name="loans">Кредиты</string>
    <string name="connecting">Connecting…</string>
    <string name="USD">USD - RUB</string>
    <string name="EUR">EUR - RUB</string>
    <string name="dollar_euro" />
    <string name="dollar" />
    <string name="euro" />
    <string name="cards" />
    <string name="portfel">Портфель с акциями Портфель с акциями Портфель с акциями Портфель с акциями Портфель с акциями Портфель с акциями Портфель с акциями Портфель с акциями Портфель с акциями Портфель с акциями Портфель с акциями Портфель с акциями Портфель с акциями Портфель с акциями Портфель с акциями Портфель с акциями Портфель с акциями Портфель с акциями Портфель с акциями Портфель с акциями Портфель с акциями Портфель с акциями Портфель с акциями Портфель с акциями Портфель с акциями Портфель с акциями Портфель с акциями Портфель с акциями Портфель с акциями Портфель с акциями Портфель с акциями Портфель с акциями Портфель с акциями </string>
    <string name="good_day">Добрый день,\nГригорий Павлович</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="value">Введите число</string>
    <string name="logoWeather">Погода для Вас</string>
    <string name="hint_cityWeather">Введите название города</string>
    <string name="searchWeather">Найти</string>
    <string name="enterWeather">Вы не ввели название города</string>
    <string name="errWeather">Ошибка.</string>
    <string name="dot">.</string>
    <string name="_0">0</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="fornews">Что ждет рынок золота в конце 2022 года и стоит ли в него инвестировать</string>
    <string name="textandgarry">textAndGarry</string>
    <string name="bottomSentence">POWERED BY SUFFERING SOULS</string>
    <string name="converter">Converter</string>
    <string name="MSC">Москва</string>
    <string-array name="currency">
        <item>AUD</item>
        <item>BYN</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>JPY</item>
        <item>PLN</item>
        <item>RUB</item>
        <item>UAH</item>
        <item>USD</item>
    </string-array>
    <string name="title_activity_deposits_and_investment">DepositsAndInvestment</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_credits">Credits</string>
    <string name="card1">Карта ···· 1234</string>
    <string name="card2">Карта ···· 5678</string>
    <string name="name">ИМЯ</string>
    <string name="balance2">225 873 ₽</string>
    <string name="balance1">13 337 ₽</string>
    <string name="taxes">Налоги</string>
    <string name="education">Образование</string>
    <string name="transport">Транспорт</string>
    <string name="communals">Услуги ЖКХ</string>
    <string name="mobileNet">Мобильная связь</string>
    <string name="pay">Оплатить</string>
    <string name="march">В марте 2022 года министр финансов РФ Антон Силуанов заявил, что на фоне нестабильной геополитической ситуации вложения в золото станут идеальной альтернативой покупке долларов. Он пояснял, что цена на золото подвержена краткосрочным колебаниям, но в долгосрочной перспективе вложения показывают свою прибыльность. При этом покупка и хранение валюты в этом году заметно осложнились. В марте Банк России ввел запрет на снятие с валютных вкладов наличных средств на сумму более $10 000. Если же вклад был открыт с 9 марта, снять с него средства можно только в рублях. Позднее регулятор продлил эти меры до марта 2023 г. В июне российские банки начали вводить комиссию за хранение валюты на счетах в размере от 0,1% до 1%. При этом многие крупные российские банки и брокеры стали отказываться от открытия накопительных счетов и вкладов в долларах и евро. Эксперты объясняли это решение невозможностью куда-либо вложить иностранную валюту, из-за чего хранение долларов и евро для банков становится невыгодным. Действуют ограничения и на покупку наличной валюты.</string>
    <string name="exchange">Заменят ли золотые слитки инвестиции в доллары</string>
    <string name="buy_gold">Выгодно ли покупать золото в 2022 году</string>
    <string name="however">При этом условия для вложений в золото заметно улучшились. С 1 марта правительство отменило НДС при покупке инвестиционного золота (золотых слитков) для физических лиц. Ранее ставка налога составляла 20%, то есть при покупке граждане переплачивали пятую часть стоимости слитка, и при продаже золота эта переплата им не возвращалась.</string>
    <string name="where_and_how">Где и как купить физическое золото и что на нем написано</string>
    <string name="simple">Самый простой способ купить физическое золото — приобрести его в одном из банков. Далеко не все банки продают золотые слитки, но крупнейшие банки, как правило, золото в продаже имеют. При этом не все торгующие золотом банки публикуют цены на драгметалл на официальном сайте. Возможно, их придется уточнять в офисе. Некоторые банки продают слитки по предварительному заказу. Граждане могут приобрести слитки массой от 1 г до 13,3 кг. Обычно слитки имеют 999 пробу (то есть доля чистого золота в них — 99,9%). Слитки имеют маркировку, нумерацию, указание массы и товарный знак завода-производителя. При покупке золота выдается специальный сертификат. Купить слиток можно лично, предъявив паспорт. Купить слитки также можно у специализированных продавцов, которые имеют соответствующее свидетельство. Их список можно найти на сайте Федеральной пробирной палаты. Покупать золото у частных лиц с рук не рекомендуется из-за высоких рисков.</string>
</resources>